(`frame-configuration-to-register' still exists, but no longer has a
key binding.)

+++
*** New command `C-x C-k x' (`kmacro-to-register') stores keyboard
macros in registers.

+++
** New command `delete-duplicate-lines'.
This searches the region for identical lines, and removes all but one
copy of each repeated line.  The lines need not be sorted.


* Changes in Specialized Modes and Packages in Emacs 24.4

+++
** More packages look for ~/.emacs.d/<foo> additionally to ~/.<foo>.
Affected files:
~/.emacs.d/timelog	replaces  ~/.timelog
~/.emacs.d/vip		replaces  ~/.vip
~/.emacs.d/viper	replaces  ~/.viper
~/.emacs.d/ido.last	replaces  ~/.ido.last
~/.emacs.d/kkcrc	replaces  ~/.kkcrc
~/.emacs.d/quickurls	replaces  ~/.quickurls
~/.emacs.d/idlwave/	replaces  ~/.idlwave/
~/.emacs.d/bdfcache.el	replaces  ~/.bdfcache.el
~/.emacs.d/places	replaces  ~/.emacs-places
~/.emacs.d/shadows	replaces  ~/.shadows
~/.emacs.d/shadow_todo	replaces  ~/.shadow_todo
~/.emacs.d/strokes	replaces  ~/.strokes
~/.emacs.d/notes	replaces  ~/.notes
~/.emacs.d/type-break	replaces  ~/.type-break
Also the following files used by the now obsolete otodo-mode.el:
~/.emacs.d/todo-do	replaces  ~/.todo-do
~/.emacs.d/todo-done	replaces  ~/.todo-done
~/.emacs.d/todo-top	replaces  ~/.todo-top

** Backtrace and debugger

+++
*** New Lisp debugger command `v' (`debugger-toggle-locals') toggles the
display of local variables of the current stack frame.

+++
*** The Lisp debugger's `e' command (`debugger-eval-expression') now includes
the lexical environment when evaluating the code in the context at point
(and so allows you to access lexical variables).

---
*** New minor mode `jit-lock-debug-mode' helps you debug code run via JIT Lock.

---
** Battery information can now be retrieved from BSD's `apm' utility.

---
** In the Buffer Menu, `M-s a C-o' shows matches for a regexp in marked buffers.

** Calendar and Diary

---
*** New faces `calendar-weekday-header', `calendar-weekend-header',